Moved hangul manipulation methods out of Form1.cs into HangulCharManipulation.cs and updated all reference to new static Hangul class

--- a/HangulCharToSoundTests/HangulCharToSoundTests.csproj
+++ b/HangulCharToSoundTests/HangulCharToSoundTests.csproj
@@ -57,6 +57,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="HangulCharManipulation.cs" />
     <Compile Include="MainFormTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
